--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@master
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -22,10 +24,7 @@ jobs:
       - name: Build project
         env:
           NUXT_UI_PRO_LICENSE: ${{ secrets.NUXT_UI_PRO_LICENSE }}
-        run: |
-          corepack enable
-          pnpm install
-          pnpm -w run docs:generate
+        run: pnpm install && pnpm -w run docs:generate
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
